Fix layout for editable projects

--- a/layout.ini
+++ b/layout.ini
@@ -1,15 +1,15 @@
 [build_folder]
-build/{{settings.build_type}}
+build/{{ settings.arch }}/{{ settings.build_type }}
 
 [source_folder]
-.
+src
 
 [includedirs]
 include
 
 # This happens to be mostly useless (with CMake), as CMake is able to find them anyway
 [libdirs]
-build/{{settings.build_type}}
+build/{{ settings.arch }}/{{ settings.build_type }}
 
 [bindirs]
-build/{{settings.build_type}}
+build/{{ settings.arch }}/{{ settings.build_type }}
