--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,4 @@ FILE(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp src/*.h src/*.hpp)
 
 add_library(${LIB_NAME} ${SOURCES})
 target_include_directories(${LIB_NAME}
-    PUBLIC ${PROJECT_SOURCE_DIR})
+    PUBLIC "${PROJECT_SOURCE_DIR}/include")
