--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -25,7 +25,9 @@ jobs:
       run: pip install conan==1.56.0
 
     - name: Install Dependencies
-      run: conan install --profile:host=default --profile:build=default -of ${{github.workspace}}/${{env.BUILD_DIR}} --build=missing .
+      run: |
+        conan install --profile:host=default --profile:build=default -of ${{github.workspace}}/${{env.BUILD_DIR}} --build=missing .
+        ls -lsa ${{github.workspace}}/${{env.BUILD_DIR}}
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
