--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install Dependencies
       run: |
         conan install --profile:host=default --profile:build=default -of ${{github.workspace}}/${{env.BUILD_DIR}} --build=missing .
-        ls -lsa ${{github.workspace}}/${{env.BUILD_DIR}}
+        ls -lsa ${{github.workspace}}/${{env.BUILD_DIR}}/conan
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
