introduce basic testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.23.1)
 
 project(CppMUSIC CXX)
-set(LIB_NAME libmusic)
+set(LIB_NAME libcppmusic)
 
 FILE(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS include/*.h include/*.hpp)
 FILE(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp src/*.h src/*.hpp)
@@ -17,3 +17,18 @@ target_include_directories(${LIB_NAME}
 target_link_libraries(${LIB_NAME}
     Eigen3::Eigen
 )
+
+# Testing
+include(GoogleTest)
+find_package(GTest CONFIG REQUIRED)
+
+set(TESTS_NAME cppmusic_tests)
+
+FILE(GLOB_RECURSE TEST_SOURCES CONFIGURE_DEPENDS tests/*.cpp)
+add_executable(${TESTS_NAME} ${TESTS_NAME})
+
+target_link_libraries(${TESTS_NAME}
+    ${LIB_NAME}
+    GTest::GTest)
+    
+gtest_discover_tests(${TESTS_NAME})
